fix tests
Signed-off-by: chenxu <chenxu@dmetasoul.com>